unpackaged/main/default/objects/Contact/fields/AccessAble_Online_User__c.field-meta.xml
<CustomField>
    <fullName>AccessAble_Online_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A web-based application that provides simplified benefit enrollment and billing processes.</description>
    <label>AccessAble Online User</label>
    <type>Checkbox</type>
</CustomField>