unpackaged/main/default/objects/Contact/fields/Account_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Id__c</fullName>
    <formula>Account.Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Partner Id</label>
    <type>Text</type>
</CustomField>