unpackaged/main/default/objects/Contact/fields/Admin_System__c.field-meta.xml
<CustomField>
    <fullName>Admin_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>