unpackaged/main/default/objects/Contact/fields/Admin_System_Record__c.field-meta.xml
<CustomField>
    <fullName>Admin_System_Record__c</fullName>
    <formula>IF(OR(CreatedBy.Alias=&#39;EDI&#39;,Owner.Alias = &#39;EDI&#39;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin System Record</label>
    <type>Checkbox</type>
</CustomField>