unpackaged/main/default/objects/Contact/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>