unpackaged/main/default/objects/Contact/fields/Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Description__c</fullName>
    <description>This field contains the Benefit description of the contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>