unpackaged/main/default/objects/Contact/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>This field contains the Benefits the Contact holds</description>
    <label>Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>DEP</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>