unpackaged/main/default/objects/Contact/fields/Blue_Rep_State__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Rep State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>