unpackaged/main/default/objects/Contact/fields/Concierge_Contact__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Contact__c</fullName>
    <formula>Account.Concierge_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concierge Contact</label>
    <type>Checkbox</type>
</CustomField>