unpackaged/main/default/objects/Contact/fields/Contact_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Case_Safe__c</fullName>
    <description>Converts the 15 character ID to an 18 character ID, used in reporting</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Contact ID - Case Safe</label>
    <type>Text</type>
</CustomField>