unpackaged/main/default/objects/Contact/fields/Contact_Record_Type_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type_ID_Case_Safe__c</fullName>
    <description>Shows the record type ID in 18 characters, used for reporting</description>
    <formula>CASESAFEID( RecordTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Type ID - Case Safe</label>
    <type>Text</type>
</CustomField>