unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>This field contains Contact type Pick list value</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Group Contact</fullName>
            </value>
            <value>
                <fullName>Medical Service Provider</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Partner Rep</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Authorized Rep/POA</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Enrollment Contact</fullName>
            </value>
            <value>
                <fullName>Funeral Home</fullName>
            </value>
            <value>
                <fullName>Health Provider</fullName>
            </value>
            <value>
                <fullName>Other Business Entity Contact</fullName>
            </value>
            <value>
                <fullName>Other Service Provider</fullName>
            </value>
            <value>
                <fullName>Carrier Contact</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Ex-Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Student Child</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Disabled Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>