unpackaged/main/default/objects/Contact/fields/Contacts1__c.field-meta.xml
<CustomField>
    <fullName>Contacts1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>