unpackaged/main/default/objects/Contact/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <description>This field contains Date of hire Information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>