unpackaged/main/default/objects/Contact/fields/Dependent_No__c.field-meta.xml
<CustomField>
    <fullName>Dependent_No__c</fullName>
    <description>field captures dependent number the contact is associated with</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>field captures dependent number the contact is associated with</inlineHelpText>
    <label>Dependent No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>