unpackaged/main/default/objects/Contact/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>This field will be used in contact matching role</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>DOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>