unpackaged/main/default/objects/Contact/fields/Email_Sales__c.field-meta.xml
<CustomField>
    <fullName>Email_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email - Sales</label>
    <type>Email</type>
</CustomField>