unpackaged/main/default/objects/Contact/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Shows Account type</description>
    <formula>TEXT (Account.Type)</formula>
    <inlineHelpText>Shows Account Type</inlineHelpText>
    <label>Entity Type</label>
    <type>Text</type>
</CustomField>