unpackaged/main/default/objects/Contact/fields/Fax_Ext__c.field-meta.xml
<CustomField>
    <fullName>Fax_Ext__c</fullName>
    <description>This field contains Fax Extension Information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Ext.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>