unpackaged/main/default/objects/Contact/fields/Fax_Sales__c.field-meta.xml
<CustomField>
    <fullName>Fax_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax - Sales</label>
    <type>Phone</type>
</CustomField>