unpackaged/main/default/objects/Contact/fields/FICATaxabilityAbsence__c.field-meta.xml
<CustomField>
    <fullName>FICATaxabilityAbsence__c</fullName>
    <label>Social Security % Taxability (absence)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>