unpackaged/main/default/objects/Contact/fields/FL__c.field-meta.xml
<CustomField>
    <fullName>FL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL</label>
    <type>Checkbox</type>
</CustomField>