unpackaged/main/default/objects/Contact/fields/HasCvabOverpayment__c.field-meta.xml
<CustomField>
    <fullName>HasCvabOverpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasCvabOverpayment</label>
    <type>Checkbox</type>
</CustomField>