unpackaged/main/default/objects/Contact/fields/HasCveOverpayment__c.field-meta.xml
<CustomField>
    <fullName>HasCveOverpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasCveOverpayment</label>
    <type>Checkbox</type>
</CustomField>