unpackaged/main/default/objects/Contact/fields/HasOverPayment__c.field-meta.xml
<CustomField>
    <fullName>HasOverPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasOverPayment</label>
    <type>Checkbox</type>
</CustomField>