unpackaged/main/default/objects/Contact/fields/HI__c.field-meta.xml
<CustomField>
    <fullName>HI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI</label>
    <type>Checkbox</type>
</CustomField>