unpackaged/main/default/objects/Contact/fields/Issue_State__c.field-meta.xml
<CustomField>
    <fullName>Issue_State__c</fullName>
    <formula>Account.Issue_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue State</label>
    <type>Text</type>
</CustomField>