unpackaged/main/default/objects/Contact/fields/LMClaim__c.field-meta.xml
<CustomField>
    <fullName>LMClaim__c</fullName>
    <description>This is created for holding the Life map claim number for the 10 contacts which are copied from LifeMap org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LMClaim#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>