unpackaged/main/default/objects/Contact/fields/LSV_Master_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Account_ID__c</fullName>
    <description>This is the LSV Master ID from the Account of the Contact, used in Matching Rules so we can find contacts at the same account. Matching Rules that match on account name will find a dupe with the same account name. This will be populated by WFR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LSV Master Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>