unpackaged/main/default/objects/Contact/fields/LSV_Master_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Contact_ID__c</fullName>
    <description>Partner Contact ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Used for all contacts other than Member Contacts.</inlineHelpText>
    <label>LSV Master Contact ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>