unpackaged/main/default/objects/Contact/fields/LSV_Master_ID_Agency_Branch__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_ID_Agency_Branch__c</fullName>
    <description>Used to hold the LSV Master ID of the Agency Branch for use in Contact Matching Rules. This field will be populated by WFR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LSV Master ID Agency Branch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>