unpackaged/main/default/objects/Contact/fields/LSV_Master_Mbr_ID__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Mbr_ID__c</fullName>
    <description>This field contains LSV Master Mbr ID Information</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This field is used for all contacts that are members.</inlineHelpText>
    <label>LSV Master Mbr ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>