unpackaged/main/default/objects/Contact/fields/MailingCity_Sales__c.field-meta.xml
<CustomField>
    <fullName>MailingCity_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>