unpackaged/main/default/objects/Contact/fields/MailingCountry_Sales__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>