unpackaged/main/default/objects/Contact/fields/MailingPostalCode_Sales__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Postal/Zip - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>