unpackaged/main/default/objects/Contact/fields/MailingState_Sales__c.field-meta.xml
<CustomField>
    <fullName>MailingState_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>