unpackaged/main/default/objects/Contact/fields/MailingStreet_Sales__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street - Sales</label>
    <length>180</length>
    <type>Text</type>
</CustomField>