unpackaged/main/default/objects/Contact/fields/MedicareTaxabilityDisability__c.field-meta.xml
<CustomField>
    <fullName>MedicareTaxabilityDisability__c</fullName>
    <label>Medicare % Taxability (disability)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>