unpackaged/main/default/objects/Contact/fields/Member_No__c.field-meta.xml
<CustomField>
    <fullName>Member_No__c</fullName>
    <description>Reflects the first 9 characters of the Dependent No which should reflect
        the member no this dependent is related</description>
    <formula>TRIM(LEFT(Dependent_No__c,9))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the first 9 characters of the Dependent No which should reflect
        the member no this dependent is related</inlineHelpText>
    <label>Member No</label>
    <type>Text</type>
</CustomField>