unpackaged/main/default/objects/Contact/fields/Membership_Count__c.field-meta.xml
<CustomField>
    <fullName>Membership_Count__c</fullName>
    <label>Membership Count</label>
    <summaryForeignKey>Member__c.Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>