unpackaged/main/default/objects/Contact/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>This information Contains Middle name information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>