unpackaged/main/default/objects/Contact/fields/Mobile_Sales__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile - Sales</label>
    <type>Phone</type>
</CustomField>