unpackaged/main/default/objects/Contact/fields/OutstandingOverpayment__c.field-meta.xml
<CustomField>
    <fullName>OutstandingOverpayment__c</fullName>
    <formula>IF( HasOverPayment__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Overpayment</label>
    <type>Text</type>
</CustomField>