unpackaged/main/default/objects/Contact/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <label>Partner Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARRTL</fullName>
            </value>
            <value>
                <fullName>FLRTL</fullName>
            </value>
            <value>
                <fullName>NCRTL</fullName>
            </value>
            <value>
                <fullName>TNRTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>