unpackaged/main/default/objects/Contact/fields/Partner_Rep_Director__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Partner Rep Director)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>