unpackaged/main/default/objects/Contact/fields/Partner_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Partner Rep Manager)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>