unpackaged/main/default/objects/Contact/fields/Partner_Rep_Position__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Position__c</fullName>
    <label>Partner Rep Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>RUR</fullName>
            </value>
            <value>
                <fullName>SGAC</fullName>
            </value>
            <value>
                <fullName>MMR</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MMC</fullName>
            </value>
            <value>
                <fullName>SAEC</fullName>
            </value>
            <value>
                <fullName>NSAES</fullName>
            </value>
            <value>
                <fullName>NSAER</fullName>
            </value>
            <value>
                <fullName>CAEC</fullName>
            </value>
            <value>
                <fullName>SMALL GROUP</fullName>
            </value>
            <value>
                <fullName>DIRECT SALES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>