unpackaged/main/default/objects/Contact/fields/Partner_Rep_Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Position_Name__c</fullName>
    <label>Partner Rep Position Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Agent/Wholesaler Manager</fullName>
            </value>
            <value>
                <fullName>Renewal Unit Rep</fullName>
            </value>
            <value>
                <fullName>Small Group Agent Coordinator</fullName>
            </value>
            <value>
                <fullName>Mid-Market Renewal</fullName>
            </value>
            <value>
                <fullName>Mid-Market Sales</fullName>
            </value>
            <value>
                <fullName>Mid-Market Combo</fullName>
            </value>
            <value>
                <fullName>Government/Public Combo</fullName>
            </value>
            <value>
                <fullName>National Strategic Account Executive Sales</fullName>
            </value>
            <value>
                <fullName>National Strategic Account Executive Renewals</fullName>
            </value>
            <value>
                <fullName>Corporate Accounts Executive Combo</fullName>
            </value>
            <value>
                <fullName>Small Group</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>