unpackaged/main/default/objects/Contact/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <description>This information contains Phone Extension information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Ext.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>