unpackaged/main/default/objects/Contact/fields/Phone_Sales__c.field-meta.xml
<CustomField>
    <fullName>Phone_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone - Sales</label>
    <type>Phone</type>
</CustomField>