unpackaged/main/default/objects/Contact/fields/Premera__c.field-meta.xml
<CustomField>
    <fullName>Premera__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Zaid to check the custom setting functionality.</description>
    <label>Premera</label>
    <type>Checkbox</type>
</CustomField>