unpackaged/main/default/objects/Contact/fields/Provider_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_Tax_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Tax ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>