unpackaged/main/default/objects/Contact/fields/Retail__c.field-meta.xml
<CustomField>
    <fullName>Retail__c</fullName>
    <formula>IF( TEXT(Partner_Code__c) == &quot;FLRTL&quot;, IMAGE(&quot;/resource/FloridaRetail&quot;, &quot;&quot;, 32.326,109.222),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail</label>
    <type>Text</type>
</CustomField>