unpackaged/main/default/objects/Contact/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG</label>
    <type>Checkbox</type>
</CustomField>