unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This information contains Role Picklist information</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Benefit Manager</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Book Keeper</fullName>
            </value>
            <value>
                <fullName>Group Contact</fullName>
            </value>
            <value>
                <fullName>Regional VP</fullName>
            </value>
            <value>
                <fullName>Writing Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>