unpackaged/main/default/objects/Contact/fields/SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SSN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>