unpackaged/main/default/objects/Contact/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>This field contains suffix information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>