unpackaged/main/default/objects/Contact/fields/Title_Sales__c.field-meta.xml
<CustomField>
    <fullName>Title_Sales__c</fullName>
    <description>Sales field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>