unpackaged/main/default/objects/Contact/recordTypes/Administrative_System_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Administrative_System_Contacts</fullName>
    <active>false</active>
    <description>Contacts Integrated Through To Salesforce</description>
    <label>Administrative System Contacts</label>
</RecordType>