unpackaged/main/default/objects/Contact/recordTypes/Dental_Operations.recordType-meta.xml
<RecordType>
    <fullName>Dental_Operations</fullName>
    <active>true</active>
    <label>Dental Operations</label>
</RecordType>