unpackaged/main/default/objects/Contact/recordTypes/Dependent.recordType-meta.xml
<RecordType>
    <fullName>Dependent</fullName>
    <active>true</active>
    <description>Dependent Contacts</description>
    <label>Dependent</label>
</RecordType>