unpackaged/main/default/objects/Contact/recordTypes/Group_Contact.recordType-meta.xml
<RecordType>
    <fullName>Group_Contact</fullName>
    <active>true</active>
    <description>Contacts associated with Master Group</description>
    <label>Group Contact</label>
</RecordType>