unpackaged/main/default/objects/Contact/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Other service contacts</description>
    <label>Other</label>
</RecordType>