unpackaged/main/default/objects/Contact/recordTypes/Partner_Rep.recordType-meta.xml
<RecordType>
    <fullName>Partner_Rep</fullName>
    <active>true</active>
    <description>Contacts representing Partners</description>
    <label>Partner Rep</label>
</RecordType>