unpackaged/main/default/objects/Contact/validationRules/Allow_No_Only_Provider_NPI.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_No_Only_Provider_NPI</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNUMBER( Provider_NPI__c )), NOT(ISBLANK( Provider_NPI__c )))</errorConditionFormula>
    <errorDisplayField>Provider_NPI__c</errorDisplayField>
    <errorMessage>Only numbers are allowed</errorMessage>
</ValidationRule>