unpackaged/main/default/objects/Contact/validationRules/Allow_No_Only_Provider_Tax_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_No_Only_Provider_Tax_ID</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISNUMBER(Provider_Tax_ID__c )), 
NOT(ISBLANK(Provider_Tax_ID__c ))
)</errorConditionFormula>
    <errorDisplayField>Provider_Tax_ID__c</errorDisplayField>
    <errorMessage>Only numbers are allowed</errorMessage>
</ValidationRule>