unpackaged/main/default/objects/Contact/validationRules/CO001_Account_Cannot_Be_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>CO001_Account_Cannot_Be_Prospect</fullName>
    <active>true</active>
    <description>This Validation rule limits who can assign a contact to a Prospect account. Only Sales and Admin users can assign a Contact to a Prospect Account.</description>
    <errorConditionFormula>AND( 
   NOT(
	OR($Profile.Name = &#39;USAble Standard Sales User&#39;, 
	   $Profile.Name = &#39;USAble System Administrator&#39;,
	   $Profile.Name = &#39;System Administrator&#39;
         ) 
      ),
	Account.RecordType.DeveloperName = &#39;Prospect&#39;
   )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>CO001 Account cannot be a Prospect type.</errorMessage>
</ValidationRule>